--- a/css/style.css
+++ b/css/style.css
@@ -401,9 +401,9 @@ header {
         display: grid;
         grid-template-columns: 1fr 200px;
         grid-template-areas: 
-            "title img"
-            "subtitle img"
-            "text img";
+            "title"
+            "subtitle"
+            "text";
         grid-column-gap: 2em;
     }
     
