--- a/css/style.css
+++ b/css/style.css
@@ -282,8 +282,8 @@ header {
         margin: 0 auto;
         grid-column-gap: 1em;
         grid-template-areas: 
-            "img title"
-            "img subtitle";
+            "title"
+            "subtitle";
         grid-template-columns: min-content max-content;
     }
     
