--- a/css/style.css
+++ b/css/style.css
@@ -9,21 +9,21 @@
 :root {
     --ff-primary: 'Lora', serif;
     --ff-secondary: 'Roboto Slab', serif;
-    
+
     --fw-reg: 400;
     --fw-bold: 700;
-    
+
     --clr-light: #f7fcfa;
     --clr-dark: #3d403e;
     --clr-accent: #40f787;
-    
+
     --fs-h1: 3rem;
     --fs-h2: 2.25rem;
     --fs-h3: 1.25rem;
     --fs-body: 1rem;
-    
-    --bs: 0.25em 0.25em 0.75em rgba(0,0,0,.25),
-          0.125em 0.125em 0.25em rgba(0,0,0,.15);
+
+    --bs: 0.25em 0.25em 0.75em rgba(0, 0, 0, .25),
+        0.125em 0.125em 0.25em rgba(0, 0, 0, .15);
 }
 
 @media (min-width: 800px) {
@@ -62,7 +62,13 @@ img {
 }
 
 
-strong { font-weight: var(--fw-bold) }
+strong {
+    font-weight: var(--fw-bold)
+}
+
+li {
+    list-style-type: none;
+}
 
 :focus {
     outline: 3px solid var(--clr-accent);
@@ -98,9 +104,17 @@ h3 {
     margin: 0;
 }
 
-h1 { font-size: var(--fs-h1) }
-h2 { font-size: var(--fs-h2) }
-h3 { font-size: var(--fs-h3) }
+h1 {
+    font-size: var(--fs-h1)
+}
+
+h2 {
+    font-size: var(--fs-h2)
+}
+
+h3 {
+    font-size: var(--fs-h3)
+}
 
 
 .section__title {
@@ -127,7 +141,7 @@ h3 { font-size: var(--fs-h3) }
     font-family: var(--ff-secondary);
     margin-bottom: 1em;
     font-size: 1.1rem;
-   
+
 }
 
 .section__subtitle--work {
@@ -157,7 +171,7 @@ header {
     left: 0;
     right: 0;
     z-index: 100;
-    
+
     transform: translateX(100%);
     transition: transform 250ms cubic-bezier(.5, 0, .5, 1);
 }
@@ -244,15 +258,20 @@ header {
     right: 0;
 }
 
-.hamburger::before { top: 6px; }
-.hamburger::after { bottom: 6px; }
+.hamburger::before {
+    top: 6px;
+}
+
+.hamburger::after {
+    bottom: 6px;
+}
 
 
 /*  Intro section  */
 
 .intro {
     position: relative;
-    
+
 }
 
 .intro__img {
@@ -269,31 +288,31 @@ header {
     width: 100%;
     height: 450px;
     object-fit: cover;
-    
+
 }
 
 
 
-@media (min-width: 600px)  {
+@media (min-width: 600px) {
     .intro {
         display: grid;
         width: min-content;
         margin: 0 auto;
         grid-column-gap: 1em;
-        grid-template-areas: 
+        grid-template-areas:
             "img title"
             "img subtitle";
         grid-template-columns: min-content max-content;
     }
-    
+
     .intro__img {
         grid-area: img;
         min-width: 250px;
         position: relative;
         z-index: 2;
         border: solid 15px grey;
-    }    
-    
+    }
+
     .section__subtitle--intro {
         align-self: start;
         grid-column: -1 / 1;
@@ -310,7 +329,7 @@ header {
         font-size: 3.5em;
         margin: 0;
     }
-    
+
 }
 
 
@@ -355,10 +374,10 @@ header {
         max-width: 80%;
         margin: 0 auto;
         margin-bottom: 10px;
-        
-    
+
+
     }
-    
+
 
     .services {
         display: flex;
@@ -366,8 +385,8 @@ header {
         margin-left: auto;
         margin-right: auto;
     }
-    
-    .service + .service {
+
+    .service+.service {
         margin-left: 2em;
     }
 
@@ -380,9 +399,9 @@ header {
     .section__subtitle--intro {
         font-size: 1.2rem;
 
-        
+
     }
-    
+
 }
 
 
@@ -395,21 +414,21 @@ header {
     box-shadow: var(--bs);
 }
 
-@media (min-width: 600px) and (max-width: 800px) {
+@media (min-width: 650px) and (max-width: 800px) {
     .about-me {
         display: grid;
-        grid-template-columns: 1fr 200px;
-        grid-template-areas: 
+        grid-template-columns: 1fr 250px;
+        grid-template-areas:
             "title img"
             "subtitle img"
             "text img";
-        grid-column-gap: 2em;
+        grid-column-gap: 2.5em;
     }
-    
+
     .section__title--about {
         grid-area: title;
     }
-    
+
     .section__subtitle--about {
         grid-column: 1 / -1;
         grid-row: 2;
@@ -428,7 +447,7 @@ header {
         width: 100%;
         margin: 0 auto;
         margin-left: 30px;
-        
+
     }
 
     .section__title--intro {
@@ -437,14 +456,15 @@ header {
         position: relative;
         top: 20px;
         margin-bottom: 0.2em;
-        
-        
+
+
     }
-    
+
     .about-me__img {
         grid-area: img;
         position: relative;
         z-index: 2;
+        height: 630px;
     }
 }
 
@@ -453,13 +473,13 @@ header {
 .my-work {
     background-color: var(--clr-dark);
     color: var(--clr-light);
-    text-align: center;    
+    text-align: center;
 }
 
 .portfolio {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-    
+
 }
 
 .portfolio__item {
@@ -468,14 +488,14 @@ header {
 }
 
 .portfolio__img {
-    transition: 
+    transition:
         transform 750ms cubic-bezier(.5, 0, .5, 1),
         opacity 250ms linear;
-        width: 100%;
-        object-fit: cover;
-               
-        height: 100%;
-       
+    width: 100%;
+    object-fit: cover;
+
+    height: 100%;
+
 }
 
 .portfolio__item:focus {
@@ -501,7 +521,7 @@ header {
 
 }
 
-.footer a { 
+.footer a {
     color: inherit;
     text-decoration: none;
 }
@@ -556,4 +576,3 @@ header {
     text-align: center;
     font-size: larger;
 }
-
