--- a/css/style.css
+++ b/css/style.css
@@ -397,6 +397,8 @@ header {
     }
 
     .section__subtitle--intro {
+        left: -2em; /* Move it more to the left */
+        width: 120%; /* Increase the width */
         font-size: 1.2rem;
 
 
@@ -442,9 +444,11 @@ header {
 
 
     .section__subtitle--intro {
+
+        left: -1.5em; /* Adjust this value to align it better */
+        width: 110%; /* Widen the text */
         font-size: 1.1rem;
         text-align: right;
-        width: 100%;
         margin: 0 auto;
         margin-left: 30px;
 
