--- a/css/style.css
+++ b/css/style.css
@@ -37,7 +37,7 @@
 
 /* General styles */
 
-/* enable this to add smooth scrolling */
+/* endable this to add smooth scrolling */
 html {
     scroll-behavior: smooth;
 }
@@ -61,8 +61,9 @@ img {
     max-width: 100%;
 }
 
+
 strong {
-    font-weight: var(--fw-bold);
+    font-weight: var(--fw-bold)
 }
 
 li {
@@ -104,15 +105,15 @@ h3 {
 }
 
 h1 {
-    font-size: var(--fs-h1);
+    font-size: var(--fs-h1)
 }
 
 h2 {
-    font-size: var(--fs-h2);
+    font-size: var(--fs-h2)
 }
 
 h3 {
-    font-size: var(--fs-h3);
+    font-size: var(--fs-h3)
 }
 
 
@@ -140,6 +141,7 @@ h3 {
     font-family: var(--ff-secondary);
     margin-bottom: 1em;
     font-size: 1.1rem;
+
 }
 
 .section__subtitle--work {
@@ -227,6 +229,11 @@ header {
     opacity: 0;
 }
 
+
+
+
+
+
 .hamburger {
     display: block;
     position: relative;
@@ -241,6 +248,7 @@ header {
     border-radius: 1em;
     transition: transform 250ms ease-in-out;
 }
+
 
 .hamburger::before,
 .hamburger::after {
@@ -258,10 +266,12 @@ header {
     bottom: 6px;
 }
 
-/* Intro section */
+
+/*  Intro section  */
 
 .intro {
     position: relative;
+
 }
 
 .intro__img {
@@ -274,12 +284,14 @@ header {
 }
 
 .about-me__img {
+
     width: 100%;
     height: 450px;
     object-fit: cover;
+
 }
 
-/* Media Queries for Intro and About Section */
+
 
 @media (min-width: 600px) {
     .intro {
@@ -317,28 +329,18 @@ header {
         font-size: 3.5em;
         margin: 0;
     }
+
 }
 
-@media (min-width: 800px) {
-    .intro {
-        max-width: 80%;
-        margin: 0 auto;
-        margin-bottom: 10px;
-    }
 
-    .section__subtitle--intro {
-        left: -2em;
-        width: 120%;
-        font-size: 1.2rem;
-    }
-}
 
-/* My services section */
+/*  My services section  */
 
 .my-services {
     background-color: var(--clr-dark);
     background-image: url(../img/services-bg.jpg);
     background-size: cover;
+    /* background-blend-mode: multiply; */
     color: var(--clr-light);
     text-align: center;
 }
@@ -368,6 +370,15 @@ header {
 }
 
 @media (min-width: 800px) and (max-width: 2800px) {
+    .intro {
+        max-width: 80%;
+        margin: 0 auto;
+        margin-bottom: 10px;
+
+
+    }
+
+
     .services {
         display: flex;
         max-width: 1000px;
@@ -386,13 +397,124 @@ header {
     }
 
     .section__subtitle--intro {
-        left: -2em;
-        width: 120%;
+        left: -2em; /* Move it more to the left */
+        width: 120%; /* Increase the width */
         font-size: 1.2rem;
+
+
+    }
+
+}
+
+
+.about-me {
+    max-width: 1000px;
+    margin: 0 auto;
+}
+
+.about-me__img {
+    box-shadow: var(--bs);
+}
+
+@media (min-width: 600px) and (max-width: 800px) {
+    .about-me {
+        display: grid;
+        grid-template-columns: 1fr 250px;
+        grid-template-areas:
+            "title img"
+            "subtitle img"
+            "text img";
+        grid-column-gap: 2.5em;
+    }
+
+    .section__title--about {
+        grid-area: title;
+    }
+
+    .section__subtitle--about {
+        grid-column: 1 / -1;
+        grid-row: 2;
+        position: relative;
+        left: -1em;
+        width: calc(100% + 2em);
+        padding-left: 1em;
+        padding-right: calc(200px + 4em);
+    }
+
+
+
+    .section__subtitle--intro {
+
+        left: -1.5em; /* Adjust this value to align it better */
+        width: 110%; /* Widen the text */
+        font-size: 1.1rem;
+        text-align: right;
+        margin: 0 auto;
+        margin-left: 30px;
+
+    }
+
+    .section__title--intro {
+        font-weight: var(--fw-reg);
+        font-size: 2.9em;
+        position: relative;
+        top: 20px;
+        margin-bottom: 0.2em;
+
+
+    }
+
+    .about-me__img {
+        grid-area: img;
+        position: relative;
+        z-index: 2;
+        height: 630px;
     }
 }
 
-/* Footer */
+/* My Work */
+
+.my-work {
+    background-color: var(--clr-dark);
+    color: var(--clr-light);
+    text-align: center;
+}
+
+.portfolio {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+
+}
+
+.portfolio__item {
+    background: var(--clr-accent);
+    overflow: hidden;
+}
+
+.portfolio__img {
+    transition:
+        transform 750ms cubic-bezier(.5, 0, .5, 1),
+        opacity 250ms linear;
+    width: 100%;
+    object-fit: cover;
+
+    height: 100%;
+
+}
+
+.portfolio__item:focus {
+    position: relative;
+    z-index: 2;
+}
+
+.portfolio__img:hover,
+.portfolio__item:focus .portfolio__img {
+    transform: scale(1.2);
+    opacity: .5;
+}
+
+
+/* footer */
 
 .footer {
     background: #111;
@@ -400,6 +522,7 @@ header {
     text-align: center;
     padding: 2.5em 0;
     font-size: var(--fs-h3);
+
 }
 
 .footer a {
@@ -412,4 +535,48 @@ header {
 }
 
 .footer__link:hover,
-.social-list__link
+.social-list__link:hover {
+    opacity: .7;
+}
+
+.footer__link:hover {
+    text-decoration: underline;
+}
+
+.social-list {
+    list-style: none;
+    display: flex;
+    justify-content: center;
+    margin: 2em 0 0;
+    padding: 0;
+}
+
+.social-list__item {
+    margin: 0 .5em;
+}
+
+.social-list__link {
+    padding: .5em;
+}
+
+
+/* Individual portfolio item styles */
+
+.portfolio-item-individual {
+    padding: 0 2em 2em;
+    max-width: 1000px;
+    margin: 0 auto;
+    margin-top: -30px;
+    padding-top: 0;
+}
+
+.portfolio-item-individual p {
+    max-width: 600px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.website {
+    text-align: center;
+    font-size: larger;
+}
